--- a/projects/auth-center/src/assets/styles.scss
+++ b/projects/auth-center/src/assets/styles.scss
@@ -1,8 +1,9 @@
 ac-layout {
   display: block;
   width: 100%;
-  height: 100%;
-  background-color: white;
+  height: 100vh;
+  background-color: white !important;
+  color: black !important;
 
   .container {
     width: 80%;
@@ -31,6 +32,6 @@ ac-layout {
   }
 
   .warn-color {
-    color: #f44336
+    color: #f44336;
   }
 }
