Material-компоненты заменены на чистый css

--- a/projects/auth-center/src/lib/pages/authorize-forbidden/authorize-forbidden-page.component.html
+++ b/projects/auth-center/src/lib/pages/authorize-forbidden/authorize-forbidden-page.component.html
@@ -1,6 +1,6 @@
 <ac-layout>
   <p class="warn-color">Ошибка. Проверочный код не совпадает</p>
   <div class="actions">
-    <button mat-raised-button routerLink="/" color="primary">Войти заново</button>
+    <button type="button" class="btn btn-primary mx-auto" routerLink="/">Войти заново</button>
   </div>
 </ac-layout>
