--- a/projects/auth-center/src/lib/pages/layout/layout.component.html
+++ b/projects/auth-center/src/lib/pages/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <section class="header-block">
     <h1>{{ appName }}</h1>
-    <mat-divider></mat-divider>
+    <div class="divider"></div>
   </section>
   <section class="content-block">
     <ng-content></ng-content>
