--- a/projects/auth-center/src/lib/pages/unauthorized/unauthorized-page.component.html
+++ b/projects/auth-center/src/lib/pages/unauthorized/unauthorized-page.component.html
@@ -1,6 +1,6 @@
 <ac-layout>
   <p>Вы неавторизованы или срок действия авторизации истек. Пожалуйста, войдите в систему.</p>
   <div class="actions">
-    <button mat-raised-button color="primary" (click)="login()">Войти</button>
+    <button type="button" class="btn btn-primary mx-auto" (click)="login()">Войти</button>
   </div>
 </ac-layout>
