--- a/projects/auth-center/src/lib/pages/callback/callback-page.component.html
+++ b/projects/auth-center/src/lib/pages/callback/callback-page.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <ng-template #success>
-      <p class="accent-color">Авторизация прошла успешно. Перенаправление...</p>
+      <p class="success-color">Авторизация прошла успешно. Перенаправление...</p>
       <div class="actions success">
         <div class="progress">
           <div class="indeterminate"></div>
